--- a/C35/Base.lproj/Main.storyboard
+++ b/C35/Base.lproj/Main.storyboard
@@ -68,10 +68,10 @@
             </objects>
             <point key="canvasLocation" x="861.60000000000002" y="-32.833583208395808"/>
         </scene>
-        <!--Game List View Controller-->
+        <!--Games List View Controller-->
         <scene sceneID="aS4-T8-sFd">
             <objects>
-                <viewController id="Vt3-t7-hGx" customClass="GameListViewController" sceneMemberID="viewController">
+                <viewController id="Vt3-t7-hGx" customClass="GamesListViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wHI-rs-4me">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -136,7 +136,7 @@
                         <outlet property="leftView" destination="af0-nE-Pei" id="7N4-OK-FVK"/>
                         <outlet property="rightView" destination="04V-ef-YAZ" id="3yx-3J-ecO"/>
                         <outlet property="scrollView" destination="5XT-Lb-4jq" id="HkN-Mt-Skq"/>
-                        <segue destination="8l0-6M-2eL" kind="show" identifier="playGame" id="A0K-8J-8pm"/>
+                        <segue destination="8l0-6M-2eL" kind="show" identifier="playyGuame" id="A0K-8J-8pm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XeM-WC-s99" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -238,10 +238,10 @@
             </objects>
             <point key="canvasLocation" x="2710" y="89"/>
         </scene>
-        <!--Gaming View Controller-->
+        <!--Palying Game View Controller-->
         <scene sceneID="MQz-fE-Bcw">
             <objects>
-                <viewController id="8l0-6M-2eL" customClass="GamingViewController" sceneMemberID="viewController">
+                <viewController id="8l0-6M-2eL" customClass="PalyingGameViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GwO-vd-1Q5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -256,7 +256,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Os0-Ip-dTb">
                                 <rect key="frame" x="30" y="507" width="315" height="100"/>
                                 <subviews>
-                                    <button opaque="NO" tag="1000" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q9b-rx-uYl" customClass="MyButton">
+                                    <button opaque="NO" tag="1000" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q9b-rx-uYl" customClass="CustmerButton">
                                         <rect key="frame" x="0.0" y="20" width="60" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="03X-NY-ZcA"/>
@@ -267,21 +267,21 @@
                                             <action selector="clickCalculationSymbol:" destination="8l0-6M-2eL" eventType="touchUpInside" id="p17-kQ-578"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" tag="1001" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yOC-vX-W09" customClass="MyButton">
+                                    <button opaque="NO" tag="1001" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yOC-vX-W09" customClass="CustmerButton">
                                         <rect key="frame" x="85" y="20" width="60" height="60"/>
                                         <state key="normal" backgroundImage="minus.png"/>
                                         <connections>
                                             <action selector="clickCalculationSymbol:" destination="8l0-6M-2eL" eventType="touchUpInside" id="HOP-Ut-Uf5"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" tag="1002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2FL-fg-WyY" customClass="MyButton">
+                                    <button opaque="NO" tag="1002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2FL-fg-WyY" customClass="CustmerButton">
                                         <rect key="frame" x="170" y="20" width="60" height="60"/>
                                         <state key="normal" backgroundImage="multiple.png"/>
                                         <connections>
                                             <action selector="clickCalculationSymbol:" destination="8l0-6M-2eL" eventType="touchUpInside" id="iPN-mD-AyH"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" tag="1003" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zdv-sM-0Lr" customClass="MyButton">
+                                    <button opaque="NO" tag="1003" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zdv-sM-0Lr" customClass="CustmerButton">
                                         <rect key="frame" x="255" y="20" width="60" height="60"/>
                                         <state key="normal" backgroundImage="divide.png"/>
                                         <connections>
@@ -361,48 +361,48 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qPP-IL-6cx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1704.8" y="627.4362818590705"/>
+            <point key="canvasLocation" x="1751" y="788"/>
         </scene>
-        <!--Speed Home View Controller-->
+        <!--Rate Home View Controller-->
         <scene sceneID="ITf-dX-bFV">
             <objects>
-                <viewController id="wwv-AZ-A1y" customClass="SpeedHomeViewController" sceneMemberID="viewController">
+                <viewController id="wwv-AZ-A1y" customClass="RateHomeViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3Xr-WI-VF2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="speed_home.png" translatesAutoresizingMaskIntoConstraints="NO" id="gPv-Sf-iJ3">
-                                <rect key="frame" x="40" y="114" width="294" height="168"/>
+                                <rect key="frame" x="40" y="114" width="295" height="168.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="gPv-Sf-iJ3" secondAttribute="height" multiplier="7:4" id="Enb-uY-aWJ"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Best" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7V7-7G-lJJ">
-                                <rect key="frame" x="167" y="332" width="41" height="26"/>
+                                <rect key="frame" x="167" y="332.5" width="41" height="26"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-----" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vs9-Cr-LjR">
-                                <rect key="frame" x="160" y="368" width="55.5" height="30"/>
+                                <rect key="frame" x="160" y="368.5" width="55.5" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Best" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pha-TA-6FY">
-                                <rect key="frame" x="167" y="418" width="41" height="26"/>
+                                <rect key="frame" x="167" y="418.5" width="41" height="26"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-----" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pX1-Td-vhV">
-                                <rect key="frame" x="168" y="454" width="39" height="21"/>
+                                <rect key="frame" x="168" y="454.5" width="39" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="0.0" blue="0.0" alpha="0.86563570209999996" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2St-Cn-6nj">
-                                <rect key="frame" x="50" y="515" width="275" height="93"/>
+                                <rect key="frame" x="50" y="515.5" width="275" height="93"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="2St-Cn-6nj" secondAttribute="height" multiplier="60.3:20.4" id="EBb-es-FdB"/>
                                 </constraints>
@@ -412,7 +412,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 chances to change question" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ggM-UN-1ar">
-                                <rect key="frame" x="66.5" y="628" width="243.5" height="21"/>
+                                <rect key="frame" x="66" y="628.5" width="243.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <color key="textColor" red="0.4549019608" green="0.47450980390000003" blue="0.5450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -449,10 +449,10 @@
             </objects>
             <point key="canvasLocation" x="943" y="788"/>
         </scene>
-        <!--Speed List View Controller-->
+        <!--Rate List View Controller-->
         <scene sceneID="1VR-dY-wU5">
             <objects>
-                <viewController id="WzW-gx-saY" customClass="SpeedListViewController" sceneMemberID="viewController">
+                <viewController id="WzW-gx-saY" customClass="RateListViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8DP-7T-0kv">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
